# OOP2

./: README.md
calculator/: CMakeLists.txt  command.cpp  command.hpp  creator_by_file.cpp  creator_by_file.hpp  logger.cpp  logger.hpp  main.cpp  parallel_calculator.cpp  parallel_calculator.hpp  parser.cpp  parser.hpp  sequential_calculator.cpp  sequential_calculator.hpp  settings.hpp  settings_parser.cpp  settings_parser.hpp  test.cpp
command/: CMakeLists.txt  clipboard.cpp  clipboard.hpp  command.hpp  command_dto.hpp  command_names.hpp  command_stack.cpp  command_stack.hpp  copy.cpp  copy.hpp  copy_parser.cpp  copy_parser.hpp  delete.cpp  delete.hpp  delete_parser.cpp  delete_parser.hpp  factory.cpp  factory.hpp  insert.cpp  insert.hpp  insert_parser.cpp  insert_parser.hpp  interval.cpp  interval.hpp  main.cpp  parser.cpp  parser.hpp  paste.cpp  paste.hpp  paste_parser.cpp  paste_parser.hpp  redo.cpp  redo.hpp  service_command.hpp  service_command_factory.cpp  service_command_factory.hpp  test.cpp  text_editor.cpp  text_editor.hpp  text_processor.cpp  (+3 more)
merge_iterator/: CMakeLists.txt  aboba.c  main.cpp  merge_iterator_concept.hpp  merge_iterator_noconcept.hpp  test.cpp
sampler/: CMakeLists.txt  floating.hpp  main.cpp  sampler.hpp  sampler_test.cpp
skip_list/: CMakeLists.txt  iterator.hpp  main.cpp  node.hpp  saved.hpp  saved2.hpp  skip_list.hpp  test.cpp
variant/: CMakeLists.txt  main.cpp  variant.hpp
